--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ r2/r2/public/static/vote.js
 r2/r2/public/static/reddit_rtl.css
 r2/data/*
 r2/count.pickle
+r2/srcount.pickle
 r2/myproduction.ini
 .DS_Store
 r2/r2.egg-info/**
