add media features

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -52,12 +52,17 @@ default_sr = localhost
 admins = 
 page_cache_time = 30
 static_path = /static/
+useragent = Mozilla/5.0 (compatible; bot/1.0; ChangeMe)
 
 solr_url =  
 
 SECRET    = abcdefghijklmnopqrstuvwxyz0123456789
 MODSECRET = abcdefghijklmnopqrstuvwxyz0123456789
 ip_hash = 
+S3KEY_ID = ABCDEFGHIJKLMNOP1234
+S3SECRET_KEY = aBcDeFgHiJkLmNoPqRsTuVwXyZ1234567890AbCd
+s3_thumb_bucket = /your.bucket.here/
+default_thumb = /static/noimage.png
 
 MIN_DOWN_LINK = 0
 MIN_UP_KARMA  = 0
@@ -68,6 +73,10 @@ MIN_RATE_LIMIT_COMMENT_KARMA = 0
 # time in days
 MODWINDOW = 2
 HOT_PAGE_AGE = 1
+
+#
+media_period  = 10 minutes
+rising_period = 12 hours
 
 # time of ratelimit purgatory (min)
 RATELIMIT = 10
