--- a/r2/example.ini
+++ b/r2/example.ini
@@ -36,6 +36,11 @@ change_db_host = 127.0.0.1
 change_db_user = reddit
 change_db_pass = password
 
+email_db_name = email
+email_db_host = 127.0.0.1
+email_db_user = reddit
+email_db_pass = password
+
 ###
 # Other magic settings
 ###
@@ -85,10 +90,15 @@ num_comments = 200
 max_comments = 500
 num_side_reddits = 20
 
+smtp_server = localhost
+new_link_share_delay = 5 minutes
+share_reply = noreply@yourdomain.com
+
 #user-agents to limit
 agents = 
 
 feedback_email = abuse@localhost
+
 
 [server:main]
 use = egg:Paste#http
