--- a/r2/example.ini
+++ b/r2/example.ini
@@ -41,12 +41,25 @@ email_db_host = 127.0.0.1
 email_db_user = reddit
 email_db_pass = password
 
+query_queue_db_name = query_queue
+query_queue_db_host = 127.0.0.1
+query_queue_db_user = reddit
+query_queue_db_pass = password
+
 ###
 # Other magic settings
 ###
 
 timezone = UTC
 monitored_servers = localhost
+
+#query cache settings
+query_caches = 127.0.0.1:11211
+num_query_queue_workers = 
+query_queue_worker = 
+enable_doquery = False
+use_query_cache = False
+write_query_queue = False
 
 stylesheet = reddit.css
 stylesheet_rtl = reddit_rtl.css
