--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 .hgignore
 lighttpd.**
 development.ini
+development_*.ini
 production.ini
 r2/r2/public/static/frame.js
 r2/r2/public/static/reddit.js
