--- a/r2/example.ini
+++ b/r2/example.ini
@@ -64,6 +64,8 @@ write_query_queue = False
 stylesheet = reddit.css
 stylesheet_rtl = reddit_rtl.css
 
+allowed_css_linked_domains = my.domain.com, my.otherdomain.com
+
 login_cookie = reddit_session
 domain = localhost
 default_sr = localhost
