Added forgotten example.ini parameter

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -65,6 +65,7 @@ stylesheet = reddit.css
 stylesheet_rtl = reddit_rtl.css
 
 allowed_css_linked_domains = my.domain.com, my.otherdomain.com
+css_killswitch = False
 
 login_cookie = reddit_session
 domain = localhost
