fix to cname handling and graceful bookmarklet rejection.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -69,6 +69,7 @@ css_killswitch = False
 
 login_cookie = reddit_session
 domain = localhost
+domain_prefix = 
 default_sr = localhost
 admins = 
 page_cache_time = 30
