added the ability for subreddit moderators to upload custom images for use in their custom stylesheets

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -66,6 +66,7 @@ stylesheet_rtl = reddit_rtl.css
 
 allowed_css_linked_domains = my.domain.com, my.otherdomain.com
 css_killswitch = False
+max_sr_images = 20
 
 login_cookie = reddit_session
 domain = localhost
