Allow a link to be forced into the organic link box for site-wide announcements

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -15,6 +15,7 @@ log_path   =
 memcaches = 127.0.0.1:11211
 rec_cache = 127.0.0.1:11311
 tracker_url = 
+adtracker_url = 
 
 main_db_name = reddit
 main_db_host = 127.0.0.1
@@ -81,6 +82,7 @@ solr_url =
 
 SECRET    = abcdefghijklmnopqrstuvwxyz0123456789
 MODSECRET = abcdefghijklmnopqrstuvwxyz0123456789
+tracking_secret = abcdefghijklmnopqrstuvwxyz0123456789
 ip_hash = 
 S3KEY_ID = ABCDEFGHIJKLMNOP1234
 S3SECRET_KEY = aBcDeFgHiJkLmNoPqRsTuVwXyZ1234567890AbCd
