missing except block in share, cache cleanup, and example.ini updates

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -13,6 +13,7 @@ proxy_addr =
 log_path   = 
 
 memcaches = 127.0.0.1:11211
+permacaches = 127.0.0.1:11211
 rec_cache = 127.0.0.1:11311
 tracker_url = 
 adtracker_url = 
@@ -55,8 +56,7 @@ timezone = UTC
 monitored_servers = localhost
 
 #query cache settings
-query_caches = 127.0.0.1:11211
-num_query_queue_workers = 
+num_query_queue_workers = 0
 query_queue_worker = 
 enable_doquery = False
 use_query_cache = False
