* decorate promoted links * interface for creating promoted links * store one organic list per unique list of subreddits rather than per user

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -17,6 +17,7 @@ permacaches = 127.0.0.1:11211
 rec_cache = 127.0.0.1:11311
 tracker_url = 
 adtracker_url = 
+clicktracker_url = 
 
 main_db_name = reddit
 main_db_host = 127.0.0.1
@@ -74,6 +75,7 @@ domain = localhost
 domain_prefix = 
 default_sr = localhost
 admins = 
+sponsors = 
 page_cache_time = 30
 static_path = /static/
 useragent = Mozilla/5.0 (compatible; bot/1.0; ChangeMe)
