--- a/r2/example.ini
+++ b/r2/example.ini
@@ -14,6 +14,7 @@ log_path   =
 
 memcaches = 127.0.0.1:11211
 permacaches = 127.0.0.1:11211
+rendercaches = 127.0.0.1:11211
 rec_cache = 127.0.0.1:11311
 tracker_url = 
 adtracker_url = 
