Moved database configuration from databases.py to the ini. Added support for load-balancing database reads.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -20,35 +20,49 @@ tracker_url =
 adtracker_url = 
 clicktracker_url = 
 
-main_db_name = reddit
-main_db_host = 127.0.0.1
-main_db_user = reddit
-main_db_pass = password
+databases = main, comment, vote, change, email, neuter, query_queue
 
-comment_db_name = reddit
-comment_db_host = 127.0.0.1
-comment_db_user = reddit
-comment_db_pass = password
+#db name         db           host          user, pass
+main_db =        newreddit,   10.96.53.79,  ri,   password
+comment_db =     newreddit,   10.96.53.76,  ri,   password
+comment2_db =    newreddit,   10.96.53.78,  ri,   password
+vote_db =        newreddit,   10.96.53.77,  ri,   password
+change_db =      changed,     10.96.53.216, ri,   password
+email_db =       email,       10.96.53.216, ri,   password
+neuter_db =      neuter,      10.96.53.216, ri,   password
+query_queue_db = query_queue, 10.96.53.220, ri,   password
 
-vote_db_name = reddit
-vote_db_host = 127.0.0.1
-vote_db_user = reddit
-vote_db_pass = password
+db_app_name = reddit
+db_create_tables = True
 
-change_db_name = changes
-change_db_host = 127.0.0.1
-change_db_user = reddit
-change_db_pass = password
+type_db = main
+rel_type_db = main
 
-email_db_name = email
-email_db_host = 127.0.0.1
-email_db_user = reddit
-email_db_pass = password
+db_table_link = thing, main, main
+db_table_account = thing, main
+db_table_message = thing, main
 
-query_queue_db_name = query_queue
-query_queue_db_host = 127.0.0.1
-query_queue_db_user = reddit
-query_queue_db_pass = password
+db_table_savehide = relation, account, link, main
+db_table_click = relation, account, link, main
+
+db_table_comment = thing, comment
+db_table_subreddit = thing, comment
+
+db_table_srmember = relation, subreddit, account, comment
+
+db_table_friend = relation, account, account, comment
+
+db_table_vote_account_link = relation, account, link, vote
+db_table_vote_account_comment = relation, account, comment, vote
+
+db_table_inbox_account_comment = relation, account, comment
+db_table_inbox_account_message = relation, account, message, main
+
+db_table_report_account_link = relation, account, link, main
+db_table_report_account_comment = relation, account, comment, comment
+db_table_report_account_message = relation, account, message, main
+db_table_report_account_subreddit = relation, account, subreddit, main
+
 
 ###
 # Other magic settings
