Cache solr query results for a short time. Speeds up domain listings and the 'next' button on the search page

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -96,6 +96,7 @@ static_path = /static/
 useragent = Mozilla/5.0 (compatible; bot/1.0; ChangeMe)
 
 solr_url =  
+solr_cache_time = 300
 
 SECRET    = abcdefghijklmnopqrstuvwxyz0123456789
 MODSECRET = abcdefghijklmnopqrstuvwxyz0123456789
