example.ini bugfixes and first trials of site traffic integration

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -19,8 +19,9 @@ rec_cache = 127.0.0.1:11311
 tracker_url = 
 adtracker_url = 
 clicktracker_url = 
+traffic_url = 
 
-databases = main, comment, vote, change, email, neuter, query_queue
+databases = main, comment, vote, change, email, query_queue
 
 #db name         db           host       user, pass
 main_db =        newreddit,   127.0.0.1, ri,   password
@@ -29,7 +30,6 @@ comment2_db =    newreddit,   127.0.0.1, ri,   password
 vote_db =        newreddit,   127.0.0.1, ri,   password
 change_db =      changed,     127.0.0.1, ri,   password
 email_db =       email,       127.0.0.1, ri,   password
-neuter_db =      neuter,      127.0.0.1, ri,   password
 query_queue_db = query_queue, 127.0.0.1, ri,   password
 
 db_app_name = reddit
@@ -55,7 +55,7 @@ db_table_friend = relation, account, account, comment
 db_table_vote_account_link = relation, account, link, vote
 db_table_vote_account_comment = relation, account, comment, vote
 
-db_table_inbox_account_comment = relation, account, comment
+db_table_inbox_account_comment = relation, account, comment, main
 db_table_inbox_account_message = relation, account, message, main
 
 db_table_report_account_link = relation, account, link, main
