make locale INI file dependent

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -12,6 +12,7 @@ translator = true
 proxy_addr = 
 log_path   = 
 
+locale = C
 memcaches = 127.0.0.1:11211
 permacaches = 127.0.0.1:11211
 rendercaches = 127.0.0.1:11211
