New help system and footer

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -115,6 +115,8 @@ MIN_DOWN_KARMA = 0
 MIN_RATE_LIMIT_KARMA = 0
 MIN_RATE_LIMIT_COMMENT_KARMA = 0
 
+WIKI_KARMA = 50
+
 # time in days
 MODWINDOW = 2
 HOT_PAGE_AGE = 1
