make 1/2 of the default reddits English reddits if the user hasn't set their language preferences and is coming from a non-en-default browser.  Also clean up and remvove old subredditbox code.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -71,6 +71,7 @@ db_table_report_account_subreddit = relation, account, subreddit, main
 ###
 
 timezone = UTC
+lang = en
 monitored_servers = localhost
 
 #query cache settings
@@ -130,7 +131,7 @@ RATELIMIT = 10
 
 num_comments = 200
 max_comments = 500
-num_side_reddits = 20
+num_default_reddits = 10
 
 smtp_server = localhost
 new_link_share_delay = 5 minutes
