Don't show very young links on the new page, so that the thumbnail fetcher et al have had time to act on them

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -125,6 +125,7 @@ HOT_PAGE_AGE = 1
 #
 media_period  = 10 minutes
 rising_period = 12 hours
+new_incubation = 90 seconds
 
 # time of ratelimit purgatory (min)
 RATELIMIT = 10
