--- a/r2/example.ini
+++ b/r2/example.ini
@@ -133,6 +133,7 @@ RATELIMIT = 10
 num_comments = 200
 max_comments = 500
 num_default_reddits = 10
+num_serendipity = 100
 
 smtp_server = localhost
 new_link_share_delay = 5 minutes
