translation updates: added missing translation string hooks and updated translation UI

--- a/r2/babel.cfg
+++ b/r2/babel.cfg
@@ -24,6 +24,8 @@
 
 [mako:**.html]
 input_encoding = utf-8
+[mako:**.email]
+input_encoding = utf-8
 [mako:**.xml]
 input_encoding = utf-8
 [mako:**.htmllite]
