Allow submissions with short enough titled to be made into T-shirts thru spreadshirt.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -144,6 +144,13 @@ agents =
 
 feedback_email = abuse@localhost
 
+# t-shirt stuff
+spreadshirt_url = 
+spreadshirt_vendor_id =
+spreadshirt_min_font =  42
+spreadshirt_max_width = 620
+spreadshirt_test_font = 
+
 
 [server:main]
 use = egg:Paste#http
