--- a/r2/example.ini
+++ b/r2/example.ini
@@ -134,6 +134,7 @@ num_comments = 200
 max_comments = 500
 num_default_reddits = 10
 num_serendipity = 100
+sr_dropdown_threshold = 15
 
 smtp_server = localhost
 new_link_share_delay = 5 minutes
