* add some new scrapers * start showing embedded videos inside of an <iframe>. This allows us to   embed videos from external sites without having to trust their DOM security
Note that the media_object property on new links is now a dictionary,
but old ones will still be strings

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -91,6 +91,7 @@ max_sr_images = 20
 login_cookie = reddit_session
 domain = localhost
 domain_prefix = 
+media_domain = localhost
 default_sr = localhost
 admins = 
 sponsors = 
