Features:     * Cassandra       * Add new cassandra libraries that we'll need to setup.py       * Select Cassandra seeds at random rather than in order       * Bugfix in CassandraCache.delete and a faster permacache migration function       * Like other caches, CassandraCaches need to be able to take (and ignore) a 'time' parameter       * add Cassandra to the permacache chain     * beginning of jury duty (later called deputy moderation)
    Additions:
    * Make /r/friends much cheaper at the expense of sorting
    * Add Jury.delete_old(), which removes Account-Trial relations > 3 days old
    * Make the pretty_button() template function's callback optional, so that
      actionless pretty-buttons can be used on the admin details page
    * make .embed listings work for permalink pages (think of this as a first pass to getting blog comments working).  Adds 'limit' and 'depth' parameter to permalink pages
    * Added final redditheader.html pretty-button class
    * new iframe ads; also make button.js static
    * Usage sampling

    Bugfixes:
    * Stop adding batched time query recalculations to the queue at all except through the catch_up_batch_queries function
    * Superflous comma might be causing IE7 to barf
    * Change the byurl keys again, to fit in memcaches 251 character limit
    * Indentation error causing non-sponsors to be able to get to the advert listing
    * Move to a custom build of pylibmc that doesn't hold the GIL during blocking operations
    * Convert some cache.gets to cache.get_multis, and implement our own thread-safety around pylibmc's client
    * Make search caching a little smarter for time searches
    * Make the ads not be cached for 30 seconds each, ie. more random
    * fix deleted things on profile pages

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -17,9 +17,17 @@ log_path   =
 
 locale = C
 memcaches = 127.0.0.1:11211
-permacaches = 127.0.0.1:11211
 rendercaches = 127.0.0.1:11211
 rec_cache = 127.0.0.1:11311
+
+# -- permacache options --
+# permacache is memcaches -> cassanda -> memcachedb
+# memcaches that sit in front of cassandra
+permacache_memcaches = 127.0.0.1:11211
+# cassandra hosts. one of these will be chosen at random by pycassa
+cassandra_seeds = 127.0.0.1:9160
+# memcachedbs
+permacaches = 127.0.0.1:11211
 
 # site tracking urls.  All urls are assumed to be to an image unless
 # otherwise noted:
@@ -109,7 +117,7 @@ timezone = UTC
 lang = en
 monitored_servers = localhost
 
-enable_usage_stats = false
+usage_sampling = 0.0
 
 #query cache settings
 num_query_queue_workers = 0
