New Features:     * Make the new targeted self-serve promotion the default       * add TheOatmeal's comic to our source.  (http://www.theoatmeal.com)       * add targetting       * add rerunning or suplementing existing campaigns       * move all sponsored link listings to be precomputed     * deputy moderation       * /about/trials and /about/modqueue       * Have trials train the spam filter       * Allow admins to see all trials, site-wide, at /r/all/about/trials       * Allow trials to be ended while votes are still coming in when the jury opinion is near-unanimous     * offload scraping to embed.ly     * Use boto for s3cp instead of forking curl
    Additions:
    * migrated all graphs to use Flot
    * Implement per-user suspiciousness quota and print over-quota trace
      * Keep track of how many questionable links a user has outstanding at any given time
    * add links to the FAQ and walkthru
    * add a differnt thumbnail for self posts (thanks to licensplate)
    * Add some visual tracking for comments trees
    * Relabel:  ban / unban => remove / approve
    * Use big remove / approve buttons when the listing relates to moderation,
      or when the item has reports or is on trial
    * Merge unban, ignore, and a new approve this non-banned link into one
    * Be a little smarter about the way we allow caching of subreddit stylesheets
    * make cassandra's cache chain cache negative results (and yes that commit message is bigger than the patch)
    * add All, friends, random, and mod to topbar
    * add a local render precache (optional)
    * better noimage.png from paradox460
    * Add a 'legacy' mode to CMemcache that will allow us to use it as a drop-in replacement for testing purposes. Modifies python-memcached to use the same 'crc' hashing algorithm that pylibmc does, and removes a feature in python-memcached that we aren't using. Contributed by Joe Terranova <joeterranova@gmail.com>
    * Everyone sees cake
    * Added g.system_user

    Bugfixe

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -161,7 +161,7 @@ tracking_secret = abcdefghijklmnopqrstuvwxyz0123456789
 ip_hash = 
 S3KEY_ID = ABCDEFGHIJKLMNOP1234
 S3SECRET_KEY = aBcDeFgHiJkLmNoPqRsTuVwXyZ1234567890AbCd
-s3_thumb_bucket = /your.bucket.here/
+s3_thumb_bucket = your.bucket.here
 default_thumb = /static/noimage.png
 
 MIN_DOWN_LINK = 0
@@ -182,6 +182,8 @@ rising_period = 12 hours
 # time of ratelimit purgatory (min)
 RATELIMIT = 10
 
+QUOTA_THRESHOLD = 0
+
 num_comments = 200
 max_comments = 500
 num_default_reddits = 10
@@ -200,6 +202,7 @@ share_reply = noreply@yourdomain.com
 agents = 
 
 feedback_email = abuse@localhost
+system_user = reddit
 
 # t-shirt stuff
 spreadshirt_url = 
