New Features     * Two new 404 aliens     * enable a comment page cache if the user isn't author of any of the comments and the page is a non-permalink.  votes and friends are updated by javascript
    Additions
    * descriptive example.ini
    * create "trusted_sponsor" who get auto-accepted
    * split off url cache from the permacache, with major clean-up to app_globals
    * Move is_banned_domain() call into POST_submit() so it can take the sanitized url
    * Redirect /r/asdfasdfasdf to the search page, not the create page.
    * updates to draw_load.py
    * orangered envelope goes to unread, not all.
    * Remove "enable whitelisting" checkbox, and switch to new failiens
    * Put verification link on email prefs page

    Bugfixes:
    * split off a minimal api controller for onload calls (which don't care about c.site or c.user, making them cheaper)
    * Assume admins want to keep their cookies forever just like everyone else
    * /randomrising bugfix
    * JSON error page was rendering in html.  it now returns "{ error: ${code} }"

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -4,72 +4,137 @@
 # The %(here)s variable will be replaced with the parent directory of this file
 #
 [DEFAULT]
+
+# -- debug and configuation flags --
+# global debug flag -- displays pylons stacktrace rather than 500 page on error when true
 debug = true
+# enables/disables template caching (for development)
 template_debug = true
+# use uncompressed static files (out of /static/js and /static/css)
+# rather than compressed files out of /static (for development if true)
 uncompressedJS = true
-translator = true
+# enable/disable verbose SQL printing 
 sqlprinting = false
+# enable/disable writing errors as they occur to a rabbit-mq queue
 exception_logging = false
+# whether to print a "reddit app started" message at start"
 log_start = true
+# enable/disable logging for amqp/rabbitmq
+amqp_logging = false
+# -- SECRETS! <-- update these first! --
+# global secret
+SECRET = abcdefghijklmnopqrstuvwxyz0123456789
+# secret for making the modhash
+MODSECRET = abcdefghijklmnopqrstuvwxyz0123456789
+# secret for /prefs/feeds
+FEEDSECRET = abcdefghijklmnopqrstuvwxyz0123456789
 
-proxy_addr = 
-log_path   = 
+# -- important settings -- 
+# the domain that this app serves itself up as
+domain = localhost
+# if you use www for the old-timey feel, put it here
+domain_prefix = 
+# the user used for "system" operations and messages
+system_user = reddit
+# list of admin accounts
+admins = reddit
+# the default subreddit for submissions
+default_sr = reddit.com
 
+# time for the page cache (for unlogged in users)
+page_cache_time = 90
+
+# default localization for strings (when using python's locale.format)
 locale = C
+# default site language (two letter character code)
+lang = en
+# if your webserver is a proxy and on a different instance, use
+# X-forwarded-for and set this to the webserver's IP
+proxy_addr = 
+# hash for validating HTTP_TRUE_CLIENT_IP_HASH
+ip_hash = 
+# timezone for storing
+timezone = UTC
+# timezone for the database
+display_timezone = MST
+# secret key for accessing /shutdown
+shutdown_secret = 12345
+# list of servers that the service monitor will care about
+monitored_servers = reddit, localhost
+# name of the cookie to drop with login information
+login_cookie = reddit_session
+
+# set to a path to enable per-request logging
+log_path   = 
+# fraction of requests to pass into the queue-based usage sampler
+usage_sampling = 0.
+
+# account used for default feedback messaging (can be #subreddit)
+admin_message_acct = reddit
+
+
+# -- caching options --
+# data cache (used for caching Thing objects)
+num_mc_clients = 5
 memcaches = 127.0.0.1:11211
+# render caches (the second is "remote" and the local is optional but in the same format)
+local_rendercache =
 rendercaches = 127.0.0.1:11211
-rec_cache = 127.0.0.1:11311
+# cache for storing service monitor information
+servicecaches = 127.0.0.1:11211
 
 # -- permacache options --
 # permacache is memcaches -> cassanda -> memcachedb
 # memcaches that sit in front of cassandra
 permacache_memcaches = 127.0.0.1:11211
 # cassandra hosts. one of these will be chosen at random by pycassa
-cassandra_seeds = 127.0.0.1:9160
-# memcachedbs
-permacaches = 127.0.0.1:11211
+cassandra_seeds =
 
-# site tracking urls.  All urls are assumed to be to an image unless
-# otherwise noted:
-tracker_url = 
-adtracker_url = 
-adframetracker_url = 
-# for tracking clicks.  Should be the url of a redirector
-clicktracker_url = 
-traffic_url = 
-
-# Just a list of words. Used by errlog.py to make up names for new errors.
-words_file = /usr/dict/words
-
-# for sponsored links:
-payment_domain = https://pay.localhost/
-authorizenetname = 
-authorizenetkey = 
-authorizenetapi = 
-min_promote_bid = 20
-max_promote_bid = 9999
-min_promote_future = 2
+# -- url cache options --
+url_caches = 127.0.0.1:11211
+# cassandra hosts. one of these will be chosen at random by pycassa
+url_seeds = 
 
 
+# caches for storing number of times a link is rendered 
+incr_cache = udp:localhost:11211
+incr_caches = localhost:11211
+# recommender cache (depricated)
+rec_cache = 127.0.0.1:11211
 
+## -- traffic tracking urls --
+# image to render to track pageviews
+tracker_url = /static/pixel.png
+# images to render to track sponsored links
+adtracker_url = /static/pixel.png
+# image to render to track the ad frame
+adframetracker_url = http://pixel.reddit.com/pixel/of_defenestration.png
+# open redirector to bounce clicks off of on sponsored links for tracking
+clicktracker_url = /static/pixel.png
+
+# amqp
 amqp_host = localhost:5672
-amqp_user = guest
-amqp_pass = guest
+amqp_user = reddit
+amqp_pass = reddit
 amqp_virtual_host = /
 
-databases = main, comment, vote, change, email, authorize, award
+## -- database setup --
+# list of all databases named in the subsequent table
+databases = main, comment, vote, email, authorize, award, hc
 
 #db name         db           host       user, pass
-main_db =        newreddit,   127.0.0.1, ri,   password
-comment_db =     newreddit,   127.0.0.1, ri,   password
-comment2_db =    newreddit,   127.0.0.1, ri,   password
-vote_db =        newreddit,   127.0.0.1, ri,   password
-change_db =      changed,     127.0.0.1, ri,   password
-email_db =       email,       127.0.0.1, ri,   password
-authorize_db =   authorize,   127.0.0.1, ri,   password
-award_db =       award,       127.0.0.1, ri,   password
+main_db =        reddit,   127.0.0.1, reddit,   password
+comment_db =     reddit,   127.0.0.1, reddit,   password
+comment2_db =    reddit,   127.0.0.1, reddit,   password
+vote_db =        reddit,   127.0.0.1, reddit,   password
+email_db =       reddit,   127.0.0.1, reddit,   password
+authorize_db =   reddit,   127.0.0.1, reddit,   password
+award_db =       reddit,   127.0.0.1, reddit,   password
+hc_db =          reddit,   127.0.0.1, reddit,   password
 
+# this setting will prefix all of the table names
 db_app_name = reddit
+# are we allowed to create tables?
 db_create_tables = True
 
 type_db = main
@@ -95,6 +160,7 @@ db_table_vote_account_comment = relation, account, comment, vote
 
 db_table_inbox_account_comment = relation, account, comment, main
 db_table_inbox_account_message = relation, account, message, main
+db_table_moderatorinbox = relation, subreddit, message, main
 
 db_table_report_account_link = relation, account, link, main
 db_table_report_account_comment = relation, account, comment, comment
@@ -104,107 +170,36 @@ db_table_report_account_subreddit = relation, account, subreddit, main
 db_table_award = thing, award
 db_table_trophy = relation, account, award, award
 
+db_table_jury_account_link = relation, account, link, main
+
 db_table_ad = thing, main
 db_table_adsr = relation, ad, subreddit, main
 
 disallow_db_writes = False
 
-###
-# Other magic settings
-###
 
-timezone = UTC
-lang = en
-monitored_servers = localhost
-
-usage_sampling = 0.0
-
-#query cache settings
-num_query_queue_workers = 0
-query_queue_worker = 
-enable_doquery = False
-use_query_cache = False
-write_query_queue = False
-
-stylesheet = reddit.css
-stylesheet_rtl = reddit_rtl.css
-
-allowed_css_linked_domains = my.domain.com, my.otherdomain.com
-css_killswitch = False
-max_sr_images = 20
-
-takedown_sr = _takedowns
-login_cookie = reddit_session
-domain = localhost
-domain_prefix = 
-media_domain = localhost
-default_sr = localhost
-automatic_reddits = 
-
-admins = 
-sponsors = 
-paid_sponsors = 
-page_cache_time = 30
-static_path = /static/
-useragent = Mozilla/5.0 (compatible; bot/1.0; ChangeMe)
-allow_shutdown = False
-profanity_wordlist = 
-
-solr_url =  
-solr_cache_time = 300
-
-markdown_backend = py
-
-SECRET    = abcdefghijklmnopqrstuvwxyz0123456789
-MODSECRET = abcdefghijklmnopqrstuvwxyz0123456789
+## -- traffic analytics --
+# google analytics token
+googleanalytics = 
+# machine to get traffic metrics from
+traffic_url = http://localhost:8010/tracker/pickle/
+# secret used for talking to the traffic machine
 tracking_secret = abcdefghijklmnopqrstuvwxyz0123456789
-ip_hash = 
-S3KEY_ID = ABCDEFGHIJKLMNOP1234
-S3SECRET_KEY = aBcDeFgHiJkLmNoPqRsTuVwXyZ1234567890AbCd
-s3_thumb_bucket = your.bucket.here
-default_thumb = /static/noimage.png
 
-MIN_DOWN_LINK = 0
-MIN_UP_KARMA  = 0
-MIN_DOWN_KARMA = 0
-MIN_RATE_LIMIT_KARMA = 0
-MIN_RATE_LIMIT_COMMENT_KARMA = 0
 
-WIKI_KARMA = 50
+## -- Self-service sponsored link stuff --
+# (secure) payment domain
+payment_domain = http://pay.localhost/
+ad_domain = http://localhost
+# authorize.net credentials
+authorizenetname = 
+authorizenetkey = 
+authorizenetapi = https://api.authorize.net/xml/v1/request.api
+min_promote_bid = 20
+max_promote_bid = 9999
+min_promote_future = 2
 
-# time in days
-MODWINDOW = 2
-HOT_PAGE_AGE = 1
-
-#
-rising_period = 12 hours
-
-# time of ratelimit purgatory (min)
-RATELIMIT = 10
-
-QUOTA_THRESHOLD = 0
-
-num_comments = 200
-max_comments = 500
-num_default_reddits = 10
-num_serendipity = 100
-sr_dropdown_threshold = 15
-
-smtp_server = localhost
-new_link_share_delay = 5 minutes
-
-# email address of the person / people running your site
-nerds_email = root@localhost
-
-share_reply = noreply@yourdomain.com
-
-#user-agents to limit
-agents = 
-
-feedback_email = abuse@localhost
-system_user = reddit
-
-# t-shirt stuff
+# -- spreadshirt --
 spreadshirt_url = 
 spreadshirt_vendor_id =
 spreadshirt_min_font =  42
@@ -212,10 +207,122 @@ spreadshirt_max_width = 620
 spreadshirt_test_font = 
 
 
+###
+# Other magic settings
+###
+
+# list of cnames allowed to render as reddit.com without a frame
+authorized_cnames = 
+
+# -- query cache settings --
+num_query_queue_workers = 5
+query_queue_worker = http://cslowe.local:8000
+enable_doquery = True
+use_query_cache = False
+write_query_queue = True
+
+# -- stylesheet editor --
+# disable custom stylesheets
+css_killswitch = False
+# list of "trusted" domains that can be referenced in url()
+allowed_css_linked_domains = static.reddit.com, www.reddit.com, reallystatic.reddit.com
+# max number of uploaded images per subreddit
+max_sr_images = 50
+# default stylesheet and it's rtl version
+stylesheet = reddit.css
+stylesheet_rtl = reddit-rtl.css
+# location of the static directory
+static_path = /static/
+
+#  -- translator UI -- 
+# enable/disable access to the translation UI in /admin/i18n
+translator = true
+# reddit runs the translator UI on a different instance with a
+# password to login.  These settings are used when generating messages
+# to translators to tell them their credentials
+translator_username =
+translator_password =
+
+# subreddit used for DMCA takedowns
+takedown_sr = _takedowns
+# png compressor
+png_optimizer = /usr/bin/env optipng
+# bad words that should be *'d out
+profanity_wordlist = 
+# which markdown backent to use (c = discount, py = markdown.py)
+markdown_backend = c
+
+# -- search --
+# where is solor?
+solr_url = 
+# how long do we cache search results (in seconds)
+solr_cache_time = 300
+
+# Just a list of words. Used by errlog.py to make up names for new errors.
+words_file = /usr/dict/words
+
+# -- media stuff --
+# user agent for the scraper
+useragent = Mozilla/5.0 (compatible; redditbot/1.0; +http://www.reddit.com/feedback)
+# your s3 credentials
+S3KEY_ID = 
+S3SECRET_KEY = 
+# s3 bucket
+s3_thumb_bucket = test.your.domain.here
+default_thumb = /static/noimage.png
+self_thumb = /static/self_default.png
+media_domain = localhost
+
+# -- limits --
+# rate limiter duration (minutes)
+RATELIMIT = 10
+# minimum display karma
+MIN_UP_KARMA = 1
+MIN_RATE_LIMIT_KARMA = 10
+MIN_RATE_LIMIT_COMMENT_KARMA = 1
+QUOTA_THRESHOLD = 5
+
+# min amount of karma to edit 
+WIKI_KARMA = 100
+
+# time in days
+MODWINDOW = 2
+HOT_PAGE_AGE = 1000
+
+# -- display options --
+# how long to consider links eligible for the rising page
+rising_period = 12 hours
+# max number of comments (default)
+num_comments = 200
+# max number of comments (if show all is selected)
+max_comments = 500
+# list of reddits to auto-subscribe users to
+automatic_reddits = 
+# cutoff number of reddits to show unsubscribed users
+num_default_reddits = 10
+# how deep do we go into the top listing when fetching /random
+num_serendipity = 250
+sr_dropdown_threshold = 15
+
+#user-agents to rate-limit
+agents = 
+
+# -- email --
+# smtp server
+smtp_server = localhost
+# delay before allowing a link to be shared
+new_link_share_delay = 30 seconds
+# alerter emails
+nerds_email = nerds@reddit.com
+# share reply email
+share_reply = noreply@reddit.com
+# feedback email 
+feedback_email = reddit@gmail.com
+
 [server:main]
 use = egg:Paste#http
 host = 0.0.0.0
-port = %(scgi_port)s
+port = %(http_port)s
 
 [app:main]
 use = egg:r2
