--- a/r2/example.ini
+++ b/r2/example.ini
@@ -92,6 +92,9 @@ servicecaches = 127.0.0.1:11211
 permacache_memcaches = 127.0.0.1:11211
 # cassandra hosts. one of these will be chosen at random by pycassa
 cassandra_seeds = 127.0.0.1:9160
+# read/write consistency levels for Cassandra
+cassandra_rcl = ONE
+cassandra_wcl = QUORUM
 
 # -- url cache options --
 url_caches = 127.0.0.1:11211
@@ -285,6 +288,8 @@ MIN_UP_KARMA = 1
 MIN_RATE_LIMIT_KARMA = 10
 MIN_RATE_LIMIT_COMMENT_KARMA = 1
 QUOTA_THRESHOLD = 5
+# Links and comments older than this many days qualify for historic preservation
+REPLY_AGE_LIMIT = 180
 
 # min amount of karma to edit 
 WIKI_KARMA = 100
@@ -302,6 +307,8 @@ num_comments = 200
 max_comments = 500
 # list of reddits to auto-subscribe users to
 automatic_reddits = 
+# special reddit that only reddit gold subscribers can use
+lounge_reddit =
 # cutoff number of reddits to show unsubscribed users
 num_default_reddits = 10
 # how deep do we go into the top listing when fetching /random
@@ -338,5 +345,5 @@ beaker.session_secret = somesecret
 # WARNING: *THE LINE BELOW MUST BE UNCOMMENTED ON A PRODUCTION ENVIRONMENT*
 # Debug mode will enable the interactive debugging tool, allowing ANYONE to
 # execute malicious code after an exception is raised.
-set debug = true
+#set debug = false
 
