* Combine cassandra clusters into a single one * Add a new Cassandra CF for comment-sort caching * Add JSONP support * Support non-auto-renewing PayPal IPNs * Gold accounting * Gold features: comments tracking, larger comment limit * Autorenewing gold * Google checkout support * Profile-page sorting for all * Title-text on the logo * Hardcache sharding and profiling * Self serve enhancements * Add /r/foo/faq * Make self-centred reddits allow for more verbose selftext * Much better down-handling of databases * Add the ability to take a thread-dump from a running process * Remove the comscore tracker * Add comments to modqueue (does not back-populate)

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -138,6 +138,8 @@ authorize_db =   reddit,   127.0.0.1, reddit,   password
 award_db =       reddit,   127.0.0.1, reddit,   password
 hc_db =          reddit,   127.0.0.1, reddit,   password
 
+hardcache_categories = *:hc
+
 # this setting will prefix all of the table names
 db_app_name = reddit
 # are we allowed to create tables?
@@ -302,9 +304,11 @@ HOT_PAGE_AGE = 1000
 # how long to consider links eligible for the rising page
 rising_period = 12 hours
 # max number of comments (default)
-num_comments = 200
-# max number of comments (if show all is selected)
+num_comments = 100
+# max number of comments (non-gold)
 max_comments = 500
+# max number of comments (gold)
+max_comments_gold = 2500
 # list of reddits to auto-subscribe users to
 automatic_reddits = 
 # special reddit that only reddit gold subscribers can use
@@ -314,6 +318,10 @@ num_default_reddits = 10
 # how deep do we go into the top listing when fetching /random
 num_serendipity = 250
 sr_dropdown_threshold = 15
+
+# Conflate visits to a comment page that happen within this many
+# seconds of each other
+comment_visits_period = 600
 
 #user-agents to rate-limit
 agents = 
