Make min age for subreddit creation configurable.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -319,6 +319,8 @@ QUOTA_THRESHOLD = 5
 REPLY_AGE_LIMIT = 180
 # Links and comments older than this many days can't be voted on
 VOTE_AGE_LIMIT = 180
+# minimum age, in days, of an account to be eligible to create a community
+min_membership_create_community = 30
 
 # min amount of karma to edit 
 WIKI_KARMA = 100
