Added support for disabling adds via config file

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -36,6 +36,9 @@ FEEDSECRET = abcdefghijklmnopqrstuvwxyz0123456789
 
 INDEXTANK_API_URL =
 
+# -- feature toggles --
+disable_ads = false
+
 # -- important settings -- 
 # the domain that this app serves itself up as
 domain = reddit.local
