--- a/r2/example.ini
+++ b/r2/example.ini
@@ -23,6 +23,8 @@ log_start = true
 amqp_logging = false
 # emergency measures: makes the site read only
 read_only_mode = false
+# global switch for wiki write permissions
+allow_wiki_editing = true
 
 # -- SECRETS! <-- update these first! --
 # global secret
@@ -37,6 +39,8 @@ INDEXTANK_API_URL =
 # -- important settings -- 
 # the domain that this app serves itself up as
 domain = reddit.local
+# the short domain (like redd.it)
+shortdomain =
 # if you use www for the old-timey feel, put it here
 domain_prefix = 
 # the user used for "system" operations and messages
@@ -310,6 +314,8 @@ MIN_RATE_LIMIT_COMMENT_KARMA = 1
 QUOTA_THRESHOLD = 5
 # Links and comments older than this many days qualify for historic preservation
 REPLY_AGE_LIMIT = 180
+# Links and comments older than this many days can't be voted on
+VOTE_AGE_LIMIT = 180
 
 # min amount of karma to edit 
 WIKI_KARMA = 100
@@ -340,6 +346,11 @@ sr_dropdown_threshold = 15
 # Conflate visits to a comment page that happen within this many
 # seconds of each other
 comment_visits_period = 600
+
+# Set this to a nonzero range and the server will restart after this many
+# minutes have passed
+LOGANS_RUN_LOW = 0
+LOGANS_RUN_HIGH = 0
 
 #user-agents to rate-limit
 agents = 
