Make default header image URL configurable.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -52,6 +52,8 @@ system_user = reddit
 admins = reddit
 # the default subreddit for submissions
 default_sr = reddit.com
+# default header image url
+default_header_url = /static/reddit.com.header.png
 
 # time for the page cache (for unlogged in users)
 page_cache_time = 90
