--- a/r2/example.ini
+++ b/r2/example.ini
@@ -38,6 +38,7 @@ INDEXTANK_API_URL =
 
 # -- feature toggles --
 disable_ads = false
+disable_captcha = false
 
 # -- important settings -- 
 # the domain that this app serves itself up as
