Add user "flair" for subreddits.
Flair is a new relation between subreddits and accounts (stored in a manner
similar to but distinct from subreddit membership). This relation can have
a text field and a CSS class name associated with it (this data is actually
stored under the account). The flair data is then incorporated into any
mention of the account within the context of the subreddit (namely, on links
and comments submitted by the user).

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -206,6 +206,8 @@ db_table_jury_account_link = relation, account, link, main
 db_table_ad = thing, main
 db_table_adsr = relation, ad, subreddit, main
 
+db_table_flair = relation, subreddit, account, main
+
 disallow_db_writes = False
 
 
