Use an API key for the embed.ly API.
Open sorcerers: you will need an API key for media scraping to work
now. Please visit http://embed.ly to sign up. It's free for <10K
URLs a month.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -313,6 +313,8 @@ s3_thumb_bucket = test.your.domain.here
 default_thumb = /static/noimage.png
 self_thumb = /static/self_default2.png
 media_domain = localhost
+# Embedly API Key
+embedly_api_key =
 
 # -- limits --
 # rate limiter duration (minutes)
