Move onload out of the app.
We need onload to be able to get a client-IP based
tracking validation hash, but it doesn't actually need
to do any database work to make those hashes. It also
fails a huge number of times per day. This moves the hash
calculation out to an external app with no db dependencies.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -127,6 +127,8 @@ incr_caches = localhost:11211
 rec_cache = 127.0.0.1:11211
 
 ## -- traffic tracking urls --
+# domain to send tracking requests (see scripts/tracker.py)
+tracking_domain = reddit.local
 # image to render to track pageviews
 tracker_url = /static/pixel.png
 # images to render to track sponsored links
