Use cross domain https for slightly safer login.
Login UI code has been simplified and moved into the client side. CORS
is used for the cross-domain POST if available, otherwise an iframe and
cookie polling technique is used. Start fleshing out the new JS tree. :)

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -85,6 +85,8 @@ display_timezone = MST
 shutdown_secret = 12345
 # list of servers that the service monitor will care about
 monitored_servers = reddit, localhost
+# https api endpoint (must be g.domain or a subdomain of g.domain)
+https_endpoint =
 # name of the cookie to drop with login information
 login_cookie = reddit_session
 
